--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div style="position:absolute; left:50%; top:50%; transform:translate(-50%;-50%);"><img src="banner.png" /></div>
   <script src="js/app.js"></script>
 
 </body>
