--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <div style="position:absolute; left:50%; top:50%; transform:translate(-50%;-50%);"><img src="banner.png" /></div>
+  <div style="position:absolute; left:50%; top:50%; transform:translate(-50%;-50%);"><img src="object.png" /></div>
   <script src="js/app.js"></script>
 
 </body>
